# pdns

m4/: pdns_with_libssl.m4
meson/libssl/: meson.build
pdns/: libssl.cc  libssl.hh  tcpiohandler.cc  tcpiohandler.hh
pdns/dnsdistdist/: dnscrypt.cc  dnscrypt.hh  dnsdist-actions-definitions.yml  dnsdist-actions-factory.cc  dnsdist-configuration-yaml.cc  dnsdist-console-completion.cc  dnsdist-dnscrypt.cc  dnsdist-ecs.cc  dnsdist-ecs.hh  dnsdist-edns.cc  dnsdist-edns.hh  dnsdist-frontend.cc  dnsdist-idstate.hh  dnsdist-lua-bindings-dnscrypt.cc  dnsdist-lua.cc  dnsdist-settings-definitions.yml  dnsdist-tcp-upstream.hh  dnsdist-tcp.cc  dnsdist-tcp.hh  dnsdist.cc  dnsdist.hh  doh3.cc  doq-common.cc  test-dnscrypt_cc.cc  test-dnsdist_cc.cc  test-dnsdistedns.cc  test-dnsdisttcp_cc.cc
pdns/dnsdistdist/docs/guides/: dnscrypt.rst
pdns/dnsdistdist/docs/reference/: actions.rst  config.rst  dnscrypt.rst
regression-tests.dnsdist/: test_DNSCrypt.py
